# hbs2

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  HISTORY.md  INSTALL.md  LICENSE  Makefile  PROTOCOL.md  QUICKSTART.md  README.md  cabal.project  cabal.project.freeze  flake.nix
.github/workflows/: build.yml  release.yml
bf6/: hbs2  hbs23  ncq-migrate.ss
docs/: CLI_MIGRATION.md  COOKBOOK.md  FAQ.md  LWWREF_VS_REFLOG.md  MIRROR_SETUP.md  TOR_DEPLOYMENT.md  VERIFY_MIRROR.md  encrypted-repos.md  multi-machine.md
docs/drafts/: barter-storage-vision.md  pep-05-tor-transport.md  pep-13-pq-encryption.md  pep-14-encrypted-keystore.md  pep-15-hd-mnemonic-keys.md  pep-16-barter-storage.md  pep-17-hbs2-hub.md
docs/notes/: rpc-peer-locator-divergence.md
hbs2-cli/: hbs2-cli.cabal
hbs2-cli/app/: Main.hs
hbs2-cli/lib/HBS2/CLI/NCQ3/: Migrate.hs
hbs2-cli/lib/HBS2/CLI/Run/: GroupKey.hs  Internal.hs  KeyMan.hs  MetaData.hs  Peer.hs  RefChan.hs  RefLog.hs  Tree.hs
hbs2-cli/lib/HBS2/CLI/Run/Internal/: GroupKey.hs  Merkle.hs  RefChan.hs  RefLog.hs
hbs2-cli/man/man1/: hbs2-cli.1
hbs2-core/: hbs2-core.cabal
hbs2-core/lib/HBS2/: Clock.hs  Hash.hs
hbs2-core/lib/HBS2/Data/Types/: Peer.hs  Refs.hs
hbs2-core/lib/HBS2/Net/Messaging/: TCP.hs  UDP.hs  Unix.hs
hbs2-core/lib/HBS2/Net/Messaging/Encrypted/: ByPass.hs
hbs2-core/lib/HBS2/Net/Proto/: Types.hs
hbs2-core/lib/HBS2/Storage/Operations/: ByteString.hs  Delete.hs  Missed.hs
hbs2-git3/: hbs2-git3.cabal
hbs2-git3/app/: GitRemoteHelper.hs
hbs2-git3/bf6/: hbs2-git
hbs2-git3/lib/HBS2/Data/Log/: Structured.hs
hbs2-git3/lib/HBS2/Git/: Local.hs
hbs2-git3/lib/HBS2/Git3/: Export.hs  Git.hs  Logger.hs  Man.hs  Prelude.hs  Run.hs  State.hs  Types.hs
hbs2-git3/lib/HBS2/Git3/Git/: Pack.hs
hbs2-git3/lib/HBS2/Git3/Repo/: Init.hs  Tools.hs  Types.hs
hbs2-git3/man/man1/: git-hbs2.1  git-remote-hbs23.1  hbs2-git3.1
hbs2-keyman/hbs2-keyman/: hbs2-keyman.cabal
hbs2-keyman/hbs2-keyman-direct-lib/: hbs2-keyman-direct-lib.cabal
hbs2-keyman/hbs2-keyman-direct-lib/HBS2/KeyMan/Keys/: Direct.hs
hbs2-keyman/man/man1/: hbs2-keyman.1
hbs2-log-structured/: hbs2-log-structured.cabal
hbs2-log-structured/lib/HBS2/Data/Log/Structured/: NCQ.hs  SD.hs
hbs2-peer/: hbs2-peer.cabal
hbs2-peer/app/: BlockDownloadNew.hs  Bootstrap.hs  Brains.hs  BrainyPeerLocator.hs  ByPassWorker.hs  HttpWorker.hs  Migrate.hs  Monkeys.hs  PeerConfig.hs  PeerInfo.hs  PeerMain.hs  PeerMeta.hs  PeerTypes.hs  RPC2.hs  Watchdogs.hs
hbs2-peer/app/CLI/: Common.hs  RefChan.hs
hbs2-peer/app/RPC2/: Die.hs  PexInfo.hs
hbs2-peer/lib/HBS2/Peer/NCQ3/Migrate/: NCQ.hs
hbs2-peer/lib/HBS2/Peer/Proto/: BlockChunks.hs  Mailbox.hs  Peer.hs  PeerExchange.hs  PeerMeta.hs
hbs2-peer/lib/HBS2/Peer/Proto/LWWRef/: Internal.hs
hbs2-peer/lib/HBS2/Peer/RPC/Client/: RefChan.hs  RefLog.hs
hbs2-peer/lib/HBS2/Peer/RPC/Internal/: Storage.hs  Types.hs
hbs2-peer/man/man1/: hbs2-peer.1
hbs2-storage-ncq/: LICENSE  README.md  hbs2-storage-ncq.cabal
hbs2-storage-ncq/app/: Main.hs
hbs2-storage-ncq/lib/HBS2/Storage/: NCQ.hs  NCQ2.hs  NCQ3.hs
hbs2-storage-ncq/lib/HBS2/Storage/NCQ/: Types.hs
hbs2-storage-ncq/lib/HBS2/Storage/NCQ2/: Internal.hs
hbs2-storage-ncq/lib/HBS2/Storage/NCQ2/Internal/: Probes.hs  Types.hs
hbs2-storage-ncq/lib/HBS2/Storage/NCQ3/: Internal.hs
hbs2-storage-ncq/lib/HBS2/Storage/NCQ3/Internal/: CLI.hs  Class.hs  Files.hs  Flags.hs  Fossil.hs  Fsync.hs  Index.hs  MMapCache.hs  Memtable.hs  Prelude.hs  Run.hs  State.hs  Sweep.hs  Types.hs  UnixCompat.hs
hbs2-storage-simple/: hbs2-storage-simple.cabal
hbs2-sync/: hbs2-sync.cabal
hbs2-sync/man/man1/: hbs2-sync.1
hbs2-sync/src/HBS2/Sync/: Internal.hs  Prelude.hs  State.hs
hbs2-tests/: hbs2-tests.cabal
hbs2-tests/integrational/: migrate-simple-2.ss  migrate-simple.ss  tmux-env.ss  tmux.ss
hbs2-tests/scripts/ncq3/: t1.ss
hbs2-tests/test/: NCQ3.hs  NCQTestCommon.hs  TCQ.hs  Tee.hs  TestCQ.hs  TestNCQ.hs
hbs2-tests/test/NCQ3/: Endurance.hs  EnduranceInProc.hs
miscellaneous/suckless-conf/: suckless-conf.cabal
miscellaneous/suckless-conf/examples/pm/: m1.ss
miscellaneous/suckless-conf/lib/Data/Config/Suckless/: Script.hs  Syntax.hs
miscellaneous/suckless-conf/lib/Data/Config/Suckless/Script/: Internal.hs
nix/: bf6-hbs2-git.nix  hm-module.nix  nixos-module.nix  tor-onion-test.nix
nix/peer/: flake.nix
nix/peer/service/: README.md  hbs2-example.nix  hbs2.nix
scripts/: bundle-darwin.sh  for-llm
