cabal-version:      3.0
name:               hbs2-log-structured
version:            0.25.2
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
-- author:
-- maintainer:
-- copyright:
category:           Database
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common shared-properties
  ghc-options:
        -Wall
        -- -fno-warn-unused-matches
        -- -fno-warn-unused-do-bind
        -- -Werror=missing-methods
        -- -Werror=incomplete-patterns
        -- -fno-warn-unused-binds
        -- -threaded
        -- -rtsopts
        -- "-with-rtsopts=-N4 -A64m -AL256m -I0"

  default-language:    Haskell2010

  default-extensions:
                       ApplicativeDo
                     , BangPatterns
                     , BlockArguments
                     , ConstraintKinds
                     , DataKinds
                     , DeriveDataTypeable
                     , DeriveGeneric
                     , DerivingStrategies
                     , DerivingVia
                     , ExtendedDefaultRules
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , ImportQualifiedPost
                     , LambdaCase
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , QuasiQuotes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeApplications
                     , TypeOperators
                     , TypeFamilies


library
    import:           shared-properties
    exposed-modules:
      HBS2.Data.Log.Structured.SD
      HBS2.Data.Log.Structured.NCQ

    -- other-modules:
    -- other-extensions:
    build-depends:    base, hbs2-core, suckless-conf
                    , async
                    , atomic-write
                    , binary
                    , bytestring
                    , bytestring-mmap
                    , cache
                    , containers
                    , directory
                    , filepath
                    , filepattern
                    , memory
                    , microlens-platform
                    , mmap
                    , mtl
                    , network-byte-order
                    , prettyprinter
                    , random
                    , safe
                    , serialise
                    , stm
                    , stm-chans
                    , streaming
                    , temporary
                    , time
                    , transformers
                    , uniplate
                    , unix
                    , unliftio
                    , unordered-containers
                    , vector
                    , zstd


    hs-source-dirs:   lib
    default-language: Haskell2010


