cabal-version:      3.0
name:               hbs2-storage-ncq
version:            0.25.0.1
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
-- author:
-- maintainer:
-- copyright:
category:           Database
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common shared-properties
  ghc-options:
        -Wall
        -- -fno-warn-unused-matches
        -- -fno-warn-unused-do-bind
        -- -Werror=missing-methods
        -- -Werror=incomplete-patterns
        -- -fno-warn-unused-binds
        -- -threaded
        -- -rtsopts
        -- "-with-rtsopts=-N4 -A64m -AL256m -I0"

  default-language:    Haskell2010

  default-extensions:
                       ApplicativeDo
                     , BangPatterns
                     , BlockArguments
                     , ConstraintKinds
                     , DataKinds
                     , DeriveDataTypeable
                     , DeriveGeneric
                     , DerivingStrategies
                     , DerivingVia
                     , ExtendedDefaultRules
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , ImportQualifiedPost
                     , LambdaCase
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , QuasiQuotes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeApplications
                     , TypeOperators
                     , TypeFamilies


library
    import:           shared-properties
    exposed-modules:  HBS2.Storage.NCQ
    -- other-modules:
    -- other-extensions:
    build-depends:    base, hbs2-core, hbs2-log-structured, suckless-conf
                    , async
                    , binary
                    , bytestring
                    , bytestring-mmap
                    , containers
                    , directory
                    , filepath
                    , filepattern
                    , memory
                    , microlens-platform
                    , mmap
                    , mtl
                    , network-byte-order
                    , prettyprinter
                    , psqueues
                    , random
                    , safe
                    , serialise
                    , stm
                    , stm-chans
                    , streaming
                    , temporary
                    , time
                    , text
                    , transformers
                    , uniplate
                    , unix
                    , unliftio
                    , unordered-containers
                    , vector
                    , zstd
                    , filelock


    hs-source-dirs:   lib
    default-language: Haskell2010


executable hbs2-ncq
    import:           shared-properties

    ghc-options:
          -Wall
          -- -fno-warn-unused-matches
          -- -fno-warn-unused-do-bind
          -- -Werror=missing-methods
          -- -Werror=incomplete-patterns
          -- -fno-warn-unused-binds
          -threaded
          -rtsopts
          "-with-rtsopts=-N8 -A64m -AL256m -I0"

    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base, hbs2-core, hbs2-storage-ncq, suckless-conf
                    , aeson
                    , async
                    , base58-bytestring
                    , binary
                    , bytestring
                    , cborg
                    , clock
                    , containers
                    , directory
                    , filepath
                    , hashable
                    , memory
                    , microlens-platform
                    , mtl
                    , optparse-applicative
                    , prettyprinter
                    , random
                    , safe
                    , serialise
                    , streaming
                    , split
                    , text
                    , temporary
                    , transformers
                    , uniplate
                    , timeit
                    , stm
                    , unliftio
                    , network-byte-order
                    , unordered-containers

    hs-source-dirs: app
    default-language: Haskell2010




