cabal-version:      3.0
name:               hbs2-storage-ncq
version:            0.25.4.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
-- author:
-- maintainer:
-- copyright:
category:           Database
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common shared-properties
  ghc-options:
        -Wall
        -- -fno-warn-unused-matches
        -- -fno-warn-unused-do-bind
        -- -Werror=missing-methods
        -- -Werror=incomplete-patterns
        -- -fno-warn-unused-binds
        -- -threaded
        -- -rtsopts
        -- "-with-rtsopts=-N4 -A64m -AL256m -I0"

  default-language:    Haskell2010

  default-extensions:
                       ApplicativeDo
                     , BangPatterns
                     , BlockArguments
                     , ConstraintKinds
                     , DataKinds
                     , DeriveDataTypeable
                     , DeriveGeneric
                     , DerivingStrategies
                     , DerivingVia
                     , ExtendedDefaultRules
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , ImportQualifiedPost
                     , LambdaCase
                     , MultiParamTypeClasses
                     , NumericUnderscores
                     , OverloadedStrings
                     , QuasiQuotes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeOperators
                     , RecordWildCards
                     , OverloadedLabels

library
    import:           shared-properties
    exposed-modules:
      HBS2.Storage.NCQ3
      HBS2.Storage.NCQ3.Internal
      HBS2.Storage.NCQ3.Internal.Class
      HBS2.Storage.NCQ3.Internal.Types
      HBS2.Storage.NCQ3.Internal.Prelude
      HBS2.Storage.NCQ3.Internal.State
      HBS2.Storage.NCQ3.Internal.Sweep
      HBS2.Storage.NCQ3.Internal.Run
      HBS2.Storage.NCQ3.Internal.Memtable
      HBS2.Storage.NCQ3.Internal.Index
      HBS2.Storage.NCQ3.Internal.MMapCache
      HBS2.Storage.NCQ3.Internal.Files
      HBS2.Storage.NCQ3.Internal.Fossil
      HBS2.Storage.NCQ3.Internal.Flags
      HBS2.Storage.NCQ3.Internal.Fsync
      HBS2.Storage.NCQ3.Internal.CLI
      HBS2.Storage.NCQ3.Internal.UnixCompat
      HBS2.Storage.NCQ.Types
    -- other-modules:
    -- other-extensions:
    build-depends:    base, hbs2-core, hbs2-log-structured, suckless-conf
                    , async
                    , binary
                    , bitvec
                    , bytestring
                    , bytestring-mmap-compat
                    , containers
                    , directory
                    , filelock
                    , filepath
                    , filepattern
                    , generic-lens
                    -- , generic-optics
                    , hashable
                    , memory
                    , microlens-platform
                    , mmap
                    , mtl
                    , mwc-random
                    , network-byte-order
                    , optics-core
                    , optics
                    , prettyprinter
                    , psqueues
                    , random
                    , safe
                    , serialise
                    , stm
                    , stm-chans
                    , streaming
                    , temporary
                    , text
                    , time
                    , transformers
                    , uniplate
                    , unix
                    , unliftio
                    , unordered-containers
                    , vector
                    , zstd

    hs-source-dirs:   lib
    default-language: Haskell2010


executable ncq3
    import:           shared-properties

    ghc-options:
          -Wall
          -- -fno-warn-unused-matches
          -- -fno-warn-unused-do-bind
          -- -Werror=missing-methods
          -- -Werror=incomplete-patterns
          -- -fno-warn-unused-binds
          -threaded
          -rtsopts
          "-with-rtsopts=-N8 -A64m -AL256m -I0"

    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base, hbs2-core, hbs2-storage-ncq, suckless-conf
                    , aeson
                    , async
                    , base58-bytestring
                    , binary
                    , bytestring
                    , bitvec
                    , cborg
                    , clock
                    , containers
                    , directory
                    , filepath
                    , hashable
                    , memory
                    , microlens-platform
                    , mtl
                    , optparse-applicative
                    , prettyprinter
                    , random
                    , safe
                    , serialise
                    , streaming
                    , split
                    , text
                    , temporary
                    , transformers
                    , uniplate
                    , timeit
                    , stm
                    , unliftio
                    , network-byte-order
                    , unordered-containers

    hs-source-dirs: app
    default-language: Haskell2010




